Remove history stop gap, add create room function

--- a/client/src/Pages/JoinRoom/JoinRoom.css
+++ b/client/src/Pages/JoinRoom/JoinRoom.css
@@ -71,3 +71,9 @@ input[type=text] {
     box-sizing: border-box;
     border: 1px solid #C8C8C8;
 } */
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
